# know

./: .gitignore  CONVENTIONS.md  LICENSE.txt  README.md  main.py  pyproject.toml  test.py  todo.org
.vocode/: config.yaml
.vocode/data/: terminal_history
.vocode/sample/: basic.yaml
explorer/: detail_generic.html
know/: __init__.py  data.py  embedding_helpers.py  file_summary.py  helpers.py  init.py  logger.py  models.py  network.py  parsers.py  project.py  repositories.py  scanner.py  settings.py  tokenizers.py
know/chunking/: __init__.py  base.py  factory.py  recursive.py
know/embeddings/: cache.py  factory.py  interface.py  quantize.py  sentence.py  worker.py
know/lang/: __init__.py  golang.py  java.py  javascript.py  markdown.py  python.py  text.py  typescript.py
know/lang/python/: parser.py
know/migrations/duckdb/: 001_init.sql  002_add_file_metrics_columns.sql  002_add_signature_json.sql  002_indexes.sql  003_add_common_indexes.sql  003_add_symbol_scores_and_embeddings.sql  003_add_vector_indexes.sql  003_node_boost.sql  004_add_doc_fts.sql  005_add_symbol_refs.sql
know/stores/: __init__.py  duckdb.py  helpers.py  memory.py  sql.py  tokenizers.py  turso.py
know/tools/: __init__.py  base.py  explorer.py  file_summary_helper.py  filecontent.py  filelist.py  filesummary.py  nodesearch.py  repomap.py  repomap_tool.py  repomaprwr.py  symbolsearch.py
src/know/: __init__.py  data.py  data_helpers.py  file_summary.py  helpers.py  init.py  project.py  scanner.py  settings.py
src/know/chunking/: factory.py
src/know/embeddings/: sentence.py  worker.py
src/know/lang/: golang.py  java.py  javascript.py  python.py  typescript.py
src/know/stores/: duckdb.py
src/know/tools/: __init__.py  base.py  (+5 more)
tests/: project.py  test_local_embeddings.py  test_memory_repositories.py  test_network.py  test_project.py  test_project_upsert.py  test_repositories.py  test_symbol_search.py  test_upsert_parsed_file.py
tests/chunking/: test_recursive_chunker.py
tests/helpers/: test_gitignore.py
tests/stores/: test_tokenizers.py
tests/tools/: test_filesummary.py  test_repomap.py  test_repomap_tool.py  test_structured_text_format.py
tools/: chatcli.py  explorer.py  filesummarycli.py  helper.py  mcpserver.py  repomapcli.py  searchcli.py
(+30 files in other folders)
