[project]
name = "know"
version = "0.1.0"
description = "VectorOps Know"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "pandas>=2.2.2",
    "pydantic>=2.11.7",
    "pygments>=2.19.1",
    "pytest>=8.4.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "duckdb==1.3.1",
    "pandas==2.3.0",
    "sentence-transformers==4.1.0",
    "click==8.2.1",
    "pathspec==0.12.1",
    "litellm>=1.73.6",
    "prompt-toolkit>=3.0.51",
    "tree-sitter-go>=0.23.4",
    "networkx>=3.5",
    "structlog>=25.4.0",
]

[tool.uv]
package = true
