[project]
name = "know"
version = "0.1.0"
description = "VectorOps Know"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "pandas>=2.2.2",
    "pydantic>=2.11.7",
    "pygments>=2.19.1",
    "duckdb==1.3.1",
    "pandas==2.3.0",
    "sentence-transformers==4.1.0",
    "click==8.2.1",
    "pathspec==0.12.1",
    "tree-sitter-go>=0.23.4",
    "networkx>=3.5",
    "structlog>=25.4.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "pypika",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.10.6",
]

[tool.uv]
package = true

[tool.uv.sources]
pypika = { git = "https://github.com/VectorOps/pypika.git", rev = "v0.49.4-dev" }

[tool.mypy]
plugins = ['pydantic.mypy']
exclude = [
    "^tests/parsers/python/samples/"
]
exclude_gitignore = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "flask>=3.1.1",
    "google-auth>=2.40.3",
    "litellm>=1.74.8",
    "prompt-toolkit>=3.0.51",
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "types-networkx>=3.5.0.20250728",
]
